Prevent trend graph from jumping around
The trend graph used behave in a pretty annoying
way when hovered, making the elements jump around.
This patch makes the mouseover information area to
always show up at the same place to prevent this
behavior. 

This fixes issue #4360

--- a/application/views/themes/default/css/default/reports.css
+++ b/application/views/themes/default/css/default/reports.css
@@ -521,6 +521,7 @@ select#period.popup {
 
 .trend_event{
 	padding:0;
+	border-top:1px solid white;
 }
 
 div#trend_event_display {
